<resources>
    <string name="app_name">Car Info</string>
    <string name="choose_name">CarType Switch</string>
    <string name="ac_temp_unit_c"> ℃</string>
    <string name="ac_temp_unit_f"> ℉</string>
    <string name="ac_ac">AC</string>
    <string name="ac_temp_lo">LO</string>
    <string name="ac_temp_hi">HI</string>
    <string name="ac_temp_lv">lv</string>
    <string name="ac_eco">ECO</string>
    <string name="ac_sync">SYNC</string>
    <string name="tx_can_show">Please select the corresponding models according to the options:</string>
    <string name="bt_can_box">manufacturer:</string>
    <string name="bt_can_line">cars:</string>
    <string name="bt_can_type">models:</string>
    <string name="bt_can_cfg">configuration:</string>
    <string name="bt_can_sure">application</string>
    <string name="tx_can_tips_same">Is this model</string>
    <string name="tx_can_tips_str">Model selection success immediately restart the machine!</string>
    <string name="other_ok">determine</string>
    <string name="other_cancel">cancel</string>
    <string name="str_car_set">CarSet</string>
    <string name="str_fuel_mil">Fuel Mil</string>
    <string name="str_compass">Compass</string>
    <string name="str_air_set">AirSet</string>
    <string name="str_usb_ipod">UsbIpod</string>
    <string name="str_trip_a_reset_timeing">TripA reset timing</string>
    <string name="str_trip_b_reset_timeing">TripB reset timing</string>
    <string name="str_adjust_out_temp">Adjust outSide temperature</string>
    <string name="str_fuel_backlight">fuel backlight</string>
    <string name="str_auto_light_sensitivity">Auto light sensitivity</string>
    <string name="str_headlight_auto_off_time">Headlight auto off time</string>
    <string name="str_interior_light_diming_time">Interior light diming time</string>
    <string name="str_keyless_lock_answer_back">Keyless lock answer back</string>
    <string name="str_key_and_remote_unlock_mode">Key and remote unlock mode</string>
    <string name="str_security_relock_time">Security relock with</string>
    <string name="str_auto_door_unlock_with">Auto door unlock with</string>
    <string name="str_auto_door_lock_with">Auto door lock with</string>
    <string name="str_keyless_access_beep">Keyless access beep</string>
    <string name="str_remote_start_system">Remote start system</string>
    <string name="str_door_unlock_mode">Door unlock mode</string>
    <string name="str_keyless_access_light_flash">Keyless access light flash</string>
    <string name="str_auto_interior_illuminatiom_sensitivity">Auto interior illumination sensitivity</string>
    <string name="str_adjust_alarm_volume">Adjust alarm volume</string>
    <string name="str_fuel_efficienty_backlight">Fuel efficienty_backlight</string>
    <string name="str_new_message_notification">New message notifications</string>
    <string name="str_speed_distance_unit">Speed distance units</string>
    <string name="str_tachometer">Tachometer</string>
    <string name="str_walk_away_auto_lock">Walk away auto lock</string>
    <string name="str_auto_head_light_on_with_wiper_on">Auto head light on with wiper on</string>
    <string name="str_voice_alarm_system_volume">Voice alarm system volume</string>
    <string name="str_engine_auto_notification">Engine automatic start stop tips</string>
    <string name="str_acc_front_waring">ACC detection prompt tone</string>
    <string name="str_pause_lkas_tone">Tone of pause LKAS</string>
    <string name="str_set_front_waring_distance">Set risk distance head of car</string>
    <string name="str_minor_lane_departure_system_settings">Minor lane departure system set</string>
    <string name="str_tachometer_settings">Tachometer settings</string>
    <string name="str_the_driving_conditions">Current Drive</string>
    <string name="str_resume_driving_conditions">History of Trip A</string>
    <string name="str_instant_fuel">Instance fuel</string>
    <string name="str_average_fuel">Average fuel</string>
    <string name="str_driving_range">Range:</string>
    <string name="str_this_time">Current</string>
    <string name="str_last_time">Previous</string>
    <string name="str_first_time">First time</string>
    <string name="str_second_time">Second time</string>
    <string name="str_third_time">Third time</string>
    <string name="str_delete_record">delete</string>
    <string name="str_trip_a">Trip A</string>
    <string name="str_invalid">--</string>
    <string name="str_refuel">With refuel</string>
    <string name="str_ignite_off">Ignite off</string>
    <string name="str_manually">Manually</string>
    <string name="str_time_0">0s</string>
    <string name="str_time_15">15s</string>
    <string name="str_time_30">30s</string>
    <string name="str_time_60">60s</string>
    <string name="str_time_90">90s</string>
    <string name="str_sensitivity_min">Min</string>
    <string name="str_sensitivity_low">Low</string>
    <string name="str_sensitivity_mid">Middle</string>
    <string name="str_sensitivity_high">High</string>
    <string name="str_sensitivity_max">Max</string>
    <string name="str_lock_by_speed">Vehicle speed</string>
    <string name="str_lock_by_stalls">Shift from P</string>
    <string name="str_lock_close">Off</string>
    <string name="str_unlock_by_drive_door">All doors when driver\'s door opens</string>
    <string name="str_unlock_by_stalls">All doors when shifted to park</string>
    <string name="str_unlock_by_acc">All doors when ignition switched off</string>
    <string name="str_unlock_by_close">Off</string>
    <string name="str_unlock_drive_door">Driver door</string>
    <string name="str_unlock_all_door">All doors</string>
    <string name="str_speed_unit_kmh">km/h  km</string>
    <string name="str_speed_unit_mph">mph  mil</string>
    <string name="str_volume_min">Small</string>
    <string name="str_volume_max">big</string>
    <string name="str_distance_fra">Away</string>
    <string name="str_distance_center">Middle</string>
    <string name="str_distance_near">Near</string>
    <string name="str_set_center">Middle</string>
    <string name="str_set_wide">Wide</string>
    <string name="str_set_warning_only">Warning only</string>
    <string name="str_compass_calibration">Compass calibration</string>
    <string name="str_compass_state">Status：</string>
    <string name="str_compass_area">Area：</string>
    <string name="str_compass_angle">magnetic field</string>
    <string name="str_compass_is_calibration">Calibrating</string>
    <string name="str_compass_exe_calibration">Perform calibration</string>
    <string name="str_compass_exit_calibration">Exit calibration</string>
    <string name="str_air_ac_mode">A/C</string>
    <string name="str_air_win_mode">Mode</string>
    <string name="str_air_temp">Temp</string>
    <string name="str_usbipod_time">00:00</string>
    <string name="str_usbipod_tarck">0/0</string>
    <string name="str_usbipod_pre">Previous</string>
    <string name="str_usbipod_next">Next</string>
    <string name="str_usbipod_play">Play</string>
    <string name="str_usbipod_pause">Pause</string>
    <string name="str_usbipod_f_pre">Pre Folder</string>
    <string name="str_usbipod_f_next">Next Folder</string>
    <string name="str_usbipod_cur_folder">CurFolder:</string>
    <string name="str_usbipod_close">Close/Stop</string>
    <string name="str_usbipod_loading">Loading</string>
    <string name="str_usbipod_uncon">No Deivice</string>
    <string name="str_usbipod_con">Device Connected</string>
    <string name="str_usbipod_playing">Playing</string>
    <string name="str_gm_air_set">Air conditioning aystem settings</string>
    <string name="str_gm_car_comforts">Vehicle comfort and convenience</string>
    <string name="str_gm_impact_checking">Collision/detection system</string>
    <string name="str_gm_lan">Language settings</string>
    <string name="str_gm_light_setttings">Light settings</string>
    <string name="str_gm_central_locking">Central locking set</string>
    <string name="str_gm_intelligent_remote_key">Smart remote key settings</string>
    <string name="str_gm_reset">Reset</string>
    <string name="str_gm_confirm_reset">Confirm factory reset</string>
    <string name="str_gm_confirm">Reset</string>
    <string name="str_gm_auto_wind_set">Automatic wind setting mode</string>
    <string name="str_gm_air_quality_sensor">Air mass sensor settings</string>
    <string name="str_gm_part_temp">Air conditioning temperature partition</string>
    <string name="str_gm_auto_defog_r">Automatic rear window defogging</string>
    <string name="str_gm_auto_defog_f">Automatic front window demisting</string>
    <string name="str_gm_remote_seat_heat">Remote start automatic seat heating</string>
    <string name="str_gm_start_mode">Air conditioning startup mode</string>
    <string name="str_gm_low">Low</string>
    <string name="str_gm_mid">Mid</string>
    <string name="str_gm_high">High</string>
    <string name="str_gm_low_send">Low sensitivity</string>
    <string name="str_gm_high_send">High sensitivity</string>
    <string name="str_gm_unified_set">Unified set</string>
    <string name="str_gm_part_setup">Partitioning Setup</string>
    <string name="str_gm_last_set">By last setting</string>
    <string name="str_gm_seek_headlight">Seek headlight function</string>
    <string name="str_gm_lock_headlight_delay">Headlight latch delay settings</string>
    <string name="str_gm_prevent_lock">Prevent the automatic latch when open door</string>
    <string name="str_gm_start_lock">Start automatically latch</string>
    <string name="str_gm_park_lock">Parking automatic latch</string>
    <string name="str_gm_delay_lock">Delay latch</string>
    <string name="str_gm_remote_unlock">Remote Unlock Light Feedback</string>
    <string name="str_gm_remote_lock">Remote lock feedback</string>
    <string name="str_gm_remote_unlock_set">Remote Unlock</string>
    <string name="str_gm_start_wiper_by_back">Rear wipers automatically start</string>
    <string name="str_gm_remote_then_lock">Remote lock the door again</string>
    <string name="str_gm_remote_start_car">Remote Automatic Vehicle</string>
    <string name="str_gm_car_body_ctrl">车身中控操作标识位</string>
    <string name="str_gm_near_unlock">Near the car unlocked settings</string>
    <string name="str_gm_froget_key">Forgotten keys reminder</string>
    <string name="str_gm_person_by_driver">Driver personalized settings</string>
    <string name="str_gm_auto_relock">Automatic re-lock the doors</string>
    <string name="str_gm_flank_warning">Blind spot warning flank</string>
    <string name="str_gm_radar_state">Parking assist radar</string>
    <string name="str_gm_away_lock">From the car automatically latch</string>
    <string name="str_gm_auto_collision">Auto collision preparation</string>
    <string name="str_gm_car_state">Car status notification</string>
    <string name="str_gm_auto_wiper">Auto Wiper</string>
    <string name="str_gm_remote_wind">Remote window control</string>
    <string name="str_gm_car_speed">Speed signal</string>
    <string name="str_gm_warning_vol">Warning sound volume settings</string>
	<string name="str_mg_lock_ctrl">Lock control</string>
	<string name="str_mg_driving_latch">Driving latch</string>
	<string name="str_mg_unlock">Auto Unlock</string>
	<string name="str_mg_unlock_mode">Unlock mode</string>
	<string name="str_mg_near_unlock">Smart unlock car near</string>
	<string name="str_mg_lights_ctrl">Lighting control (with me home)</string>
	<string name="str_mg_revers_lights">Reversing light</string>
	<string name="str_mg_near_lights">Low beam lights</string>
	<string name="str_mg_fog_lights">Rear fog lamps</string>
	<string name="str_mg_gohome_time">I went home with the duration</string>
	<string name="str_mg_f_lights_ctrl">Lighting control (look for cars indication)</string>
	<string name="str_mg_f_gohome_time">Searching cars indication duration</string>
</resources>